--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "nodemailer": "^6.9.3"
+    "googleapis": "^118.0.0"
   },
   "keywords": [],
   "author": "Hafis vs",
