--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "express": "^4.18.2",
-    "nodemailer": "^6.9.3",
-    "googleapis": "^118.0.0"
-  },
+  "body-parser": "^1.20.2",
+  "crypto": "^1.0.1",
+  "express": "^4.18.2",
+  "fs": "0.0.1-security",
+  "googleapis": "^133.0.0",
+  "nodemailer": "^6.9.8",
+  "pdfkit": "^0.13.0"
+}
   "keywords": [],
   "author": "Hafis vs",
   "license": "ISC"
